[Chore] ignore 파일 정리

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 
 # Visual Studio cache directory
 /FarmDefencer/.vs/
-/FarmDefencer/.vsconfig/
+/FarmDefencer/.vsconfig
 
 # Gradle cache directory
 /FarmDefencer/.gradle/
