--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.dylib filter=lfs diff=lfs merge=lfs -text
 
-text eol=lf
+* text=auto eol=lf
 # *.meta text eol=lf
 # *.asset binary
