--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,18 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.dylib filter=lfs diff=lfs merge=lfs -text
 
-* text=auto eol=lf
-# *.meta text eol=lf
-# *.asset binary
+# Unity 관련 텍스트 파일들
+*.shader text eol=lf
+*.mat text eol=lf
+*.meta text eol=lf
+*.anim text eol=lf
+*.unity text eol=lf
+*.prefab text eol=lf
+*.asset text eol=lf
+*.cs text eol=lf
+
+# 바이너리 파일 예시
+*.png binary
+*.jpg binary
+*.ogg binary
+*.wav binary
