--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.dylib filter=lfs diff=lfs merge=lfs -text
 
+* text=auto eol=lf
+
 # Unity 관련 텍스트 파일들
 *.shader text eol=lf
 *.mat text eol=lf
