[Chore] * text=auto eol=lf 만 남기기

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,18 +3,18 @@
 
 * text=auto eol=lf
 
-# Unity 관련 텍스트 파일들
-*.shader text eol=lf
-*.mat text eol=lf
-*.meta text eol=lf
-*.anim text eol=lf
-*.unity text eol=lf
-*.prefab text eol=lf
-*.asset text eol=lf
-*.cs text eol=lf
+# # Unity 관련 텍스트 파일들
+# *.shader text eol=lf
+# *.mat text eol=lf
+# *.meta text eol=lf
+# *.anim text eol=lf
+# *.unity text eol=lf
+# *.prefab text eol=lf
+# *.asset text eol=lf
+# *.cs text eol=lf
 
-# 바이너리 파일 예시
-*.png binary
-*.jpg binary
-*.ogg binary
-*.wav binary
+# # 바이너리 파일 예시
+# *.png binary
+# *.jpg binary
+# *.ogg binary
+# *.wav binary
