[Chore] vscode .gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@
 /FarmDefencer/.vs/
 /FarmDefencer/.vsconfig
 
+# VSCode settings (personal environment)
+/.vscode/
+/FarmDefencer/.vscode/
+
 # Gradle cache directory
 /FarmDefencer/.gradle/
 
